Added coming soon code, html and css files, and 1 image

--- a/kashdoesstuff.html
+++ b/kashdoesstuff.html
@@ -1,14 +1,13 @@
 <!DOCTYPE HTML>
 
 <html>
+<style>
 
-<title>Kash Does Stuff</title>
-
+</style>
 <body>
 
   <h1>Kash Does Stuff</h1>
-
-  <div id="About Kash">
+  <div id="intro">
     <h2>About Kash</h2>
     <p>Kash can be described as an individual with ecletic tastes and a strong personality. Though they may be young, they have chosen to dedicate their life to giving back to their community in various ways.<br /><br /> Kash has interests in both art and tech, believing that one cannot exist without the other.</p>
   </div>
@@ -20,15 +19,6 @@
       <li>Technology</li>
       <li>Contact</li>
     </ul>
-  </div>
-
-  <div id="Art">
-  </div>
-
-  <div id="Technology">
-  </div>
-
-  <div id="Contact">
   </div>
 
   </body>
