minor additions to html code

--- a/kashdoesstuff.html
+++ b/kashdoesstuff.html
@@ -1,24 +1,35 @@
 <!DOCTYPE HTML>
 
 <html>
-<style>
 
-</style>
+<title>Kash Does Stuff</title>
+
 <body>
 
   <h1>Kash Does Stuff</h1>
-  <div id="intro">
+
+  <div id="Directory">
+    <h2>Directory</h2>
+    <ul>
+      <li><a href="#">Art</a></li>
+      <li><a href="#">Technology</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </div>
+
+  <div id="About Kash">
     <h2>About Kash</h2>
     <p>Kash can be described as an individual with ecletic tastes and a strong personality. Though they may be young, they have chosen to dedicate their life to giving back to their community in various ways.<br /><br /> Kash has interests in both art and tech, believing that one cannot exist without the other.</p>
   </div>
 
-  <div id="direct">
-    <h2>Directory</h2>
-    <ul>
-      <li>Art</li>
-      <li>Technology</li>
-      <li>Contact</li>
-    </ul>
+
+  <div id="Art">
+  </div>
+
+  <div id="Technology">
+  </div>
+
+  <div id="Contact">
   </div>
 
   </body>
