minor changes to html and css files

--- a/kashdoesstuff.html
+++ b/kashdoesstuff.html
@@ -17,6 +17,8 @@
     </ul>
   </div>
 
+  <div></div>
+
   <div id="About Kash">
     <h2>About Kash</h2>
     <p>Kash can be described as an individual with ecletic tastes and a strong personality. Though they may be young, they have chosen to dedicate their life to giving back to their community in various ways.<br /><br /> Kash has interests in both art and tech, believing that one cannot exist without the other.</p>
