Added link to subdirectory in html code

--- a/kashdoesstuff.html
+++ b/kashdoesstuff.html
@@ -2,7 +2,9 @@
 
 <html>
 
-<title>Kash Does Stuff</title>
+<head>
+  <title>Kash Does Stuff</title>
+</head>
 
 <body>
 
@@ -11,13 +13,11 @@
   <div id="Directory">
     <h2>Directory</h2>
     <ul>
-      <li><a href="#">Art</a></li>
-      <li><a href="#">Technology</a></li>
-      <li><a href="#">Contact</a></li>
+      <li href="#"><a href="https://www.kashdoesstuff.com/subdirectory/index.html">Art</a></li>
+      <li href="#">Technology</li>
+      <li href="#">Contact</li>
     </ul>
   </div>
-
-  <div></div>
 
   <div id="About Kash">
     <h2>About Kash</h2>
